# PyProBE

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CITATIONS.bib  CONTRIBUTING.md  Experiment.py  LICENSE  README.md  accessing_data.html  asv.conf.json  creating_a_new_method.html  dashboard_data.parquet  developer_guide.html  developer_installation.html  genindex.html  getting_started.html  import_data.py  importing_data.html  index.html  input_data_guidance.html  installation.html  introduction.html  modules.html  objects.inv  plotting.html  py-modindex.html  pyprobe.cell.html  pyprobe.cyclers.basecycler.html  pyprobe.cyclers.biologic.html  pyprobe.cyclers.html  pyprobe.cyclers.neware.html  pyprobe.dashboard.html  pyprobe.experiments.baseexperiment.html  pyprobe.experiments.cycling.html  pyprobe.experiments.html  pyprobe.experiments.pOCV.html  (+26 more)
.doctrees/: accessing_data.doctree  creating_a_new_method.doctree  developer_guide.doctree  developer_installation.doctree  environment.pickle  getting_started.doctree  importing_data.doctree  index.doctree  input_data_guidance.doctree  installation.doctree  introduction.doctree  modules.doctree  plotting.doctree  pyprobe.cell.doctree  pyprobe.cyclers.basecycler.doctree  pyprobe.cyclers.biologic.doctree  pyprobe.cyclers.doctree  pyprobe.cyclers.neware.doctree  pyprobe.dashboard.doctree  pyprobe.doctree  pyprobe.experiments.baseexperiment.doctree  pyprobe.experiments.cycling.doctree  pyprobe.experiments.doctree  pyprobe.experiments.pOCV.doctree  pyprobe.experiments.pulsing.doctree  pyprobe.filter.doctree  pyprobe.methods.basemethod.doctree  pyprobe.methods.differentiation.LEAN.doctree  pyprobe.methods.differentiation.doctree  pyprobe.methods.doctree  pyprobe.methods.ocv_fitting.DMA.doctree  pyprobe.methods.ocv_fitting.Simple_OCV_fit.doctree  pyprobe.methods.ocv_fitting.doctree  pyprobe.plot.doctree  pyprobe.procedure.doctree  pyprobe.rawdata.doctree  pyprobe.result.doctree  pyprobe.unitconverter.doctree  user_guide.doctree  writing_a_readme_file.doctree  (+1 more)
.doctrees/api/: modules.doctree  pyprobe.analysis.base.degradation_mode_analysis_functions.doctree  pyprobe.analysis.base.differentiation_functions.doctree  pyprobe.analysis.base.doctree  pyprobe.analysis.cycling.doctree  (+26 more)
.github/: dependabot.yml
_sources/: accessing_data.rst.txt  creating_a_new_method.rst.txt  developer_guide.rst.txt  importing_data.rst.txt  index.rst.txt  input_data_guidance.rst.txt  installation.rst.txt  modules.rst.txt  pyprobe.experiments.baseexperiment.rst.txt  pyprobe.experiments.cycling.rst.txt  pyprobe.experiments.pOCV.rst.txt  pyprobe.experiments.rst.txt  pyprobe.methods.differentiation.LEAN.rst.txt  pyprobe.methods.differentiation.rst.txt  pyprobe.methods.ocv_fitting.Simple_OCV_fit.rst.txt  pyprobe.methods.rst.txt  pyprobe.procedure.rst.txt  pyprobe.rst.txt  user_guide.rst.txt  writing_a_readme_file.rst.txt  writing_an_experiment_record.rst.txt
api/: modules.html  pyprobe.analysis.base.degradation_mode_analysis_functions.html  pyprobe.analysis.base.differentiation_functions.html  pyprobe.analysis.base.html  pyprobe.analysis.cycling.html  pyprobe.analysis.degradation_mode_analysis.html  pyprobe.analysis.differentiation.html  pyprobe.analysis.html  pyprobe.analysis.pulsing.html  pyprobe.analysis.smoothing.html  pyprobe.analysis.utils.html  pyprobe.cell.html  pyprobe.cyclers.arbin.html  pyprobe.cyclers.basecycler.html  pyprobe.cyclers.basytec.html  pyprobe.cyclers.biologic.html  pyprobe.cyclers.html  pyprobe.cyclers.maccor.html  pyprobe.cyclers.neware.html  pyprobe.dashboard.html  pyprobe.filters.html  pyprobe.html  pyprobe.logger.html  pyprobe.plot.html  pyprobe.pyprobe_types.html  pyprobe.rawdata.html  pyprobe.readme_processor.html  pyprobe.result.html  pyprobe.typing.html  pyprobe.units.html  pyprobe.utils.html
benchmarks/: benchmark_cell.py  benchmark_experiment.py  benchmark_filter.py  benchmark_functions.py  benchmark_procedure.py
developer_guide/: adding_a_cycler.html  contributing_to_the_analysis_module.html  dependency_guide.html  developer_guide.html  developer_installation.html
docs/: Makefile
examples/: LEAN-differentiation.html  LEAN-differentiation.ipynb  analysing-GITT-data.html  analysing-GITT-data.ipynb  comparing-pyprobe-performance.html  comparing-pyprobe-performance.ipynb  differentiating-voltage-data.html  differentiating-voltage-data.ipynb  examples.html  filtering-data.html  filtering-data.ipynb  getting-started.html  getting-started.ipynb  ocv-fitting.html  ocv-fitting.ipynb  providing-valid-inputs.html  providing-valid-inputs.ipynb  sharing-data.html  sharing-data.ipynb  working-with-pybamm-models.html  working-with-pybamm-models.ipynb
paper/: paper.bib  paper.md
pybatdata/: base.py  batterycycler.py  cell.py  cycle.py  cycler.py  cyclers.py  dashboard.py  experiment.py  filter.py  import_data.py  method.py  plot.py  postprocessor.py  preprocessor.py  procedure.py  rawdata.py  result.py  run.py  script.py  step.py  units.py  viewer.py  write_parquet.py
pyprobe/: __init__.py  _version.py  batterycycler.py  cell.py  column.py  column_name.py  dashboard.py  dataimporter.py  filter.py  filters.py  logger.py  method.py  plot.py  preprocess.py  procedure.py  pyprobe_types.py  rawdata.py  readme_processor.py  result.py  typing.py  unitconverter.py  units.py  utils.py
tests/: Experiment_Record.xlsx  __init__.py  conftest.py  test_base.py  test_cell.py  test_column.py  test_column_name.py  test_cycle.py  test_dashboard.py  test_dataimporter.py  test_experiment.py  test_filter.py  test_logger.py  test_method.py  test_package.py  test_plot.py  test_preprocess.py  test_preprocessor.py  test_procedure.py  test_rawdata.py  test_readme_processor.py  test_result.py  test_step.py  test_unitconverter.py  test_units.py  test_utils.py  test_version.py
user_guide/: accessing_data.html  analysis.html  importing_data.html  input_data_guidance.html  installation.html  introduction.html  plotting.html  user_guide.html  writing_a_readme_file.html  writing_an_experiment_record.html
(+277 files in other folders)
