[project]
name = "PyProBE-Data"
authors = [
  {name = "Thomas Holland"},
]
dynamic = ["version"]
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
    "deprecated>=1.2.15",
    "distinctipy>=1.3.4",
    "fastexcel>=0.12.0",
    "ipykernel>=6.29.5",
    "numpy>=2.2.1",
    "plotly>=5.24.1",
    "polars>=1.18.0",
    "pydantic>=2.10.4",
    "pyyaml>=6.0.2",
    "ray>=2.40.0",
    "scikit-learn>=1.6.0",
    "streamlit>=1.41.1",
    "sympy>=1.13.3",
]

classifiers = [
  "License :: OSI Approved :: BSD License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/ImperialCollegeLondon/PyProBE"
Documentation = "https://imperialcollegelondon.github.io/PyProBE/"
Repository = "https://github.com/ImperialCollegeLondon/PyProBE"
Releases = "https://github.com/ImperialCollegeLondon/PyProBE/releases"
Changelog = "https://github.com/ImperialCollegeLondon/PyProBE/blob/main/CHANGELOG.md"

[project.optional-dependencies]
hvplot = [
    "hvplot>=0.11.2",
]
seaborn = [
    "seaborn>=0.13.2",
]
dev = [
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "python-semantic-release>=9.15.2",
    "nbmake>=1.5.5",
    "pytest>=8.3.4",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-mypy>=0.10.3",
    "types-deprecated>=1.2.15.20241117",
    "types-pyyaml>=6.0.12.20241230",
    "types-toml>=0.10.8.20240310",
    "xlsxwriter>=3.2.0",
    "ruff>=0.9.1",
]
docs = [
    "autodoc-pydantic>=2.2.0",
    "nbsphinx>=0.9.6",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=8.1.3",
    "sphinx-design>=0.6.1",
    "sphinx-tabs>=3.4.7",
    "sphinxcontrib-bibtex>=2.6.3",
]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["pyprobe"]
exclude = [
    "htmlcov/*",
    "tests/*",
    "docs/*",
    "examples/*"
]

[tool.hatch.version]
path = "pyprobe/_version.py"

[tool.semantic_release]
version_source = "tag"
version_variables = ["pyprobe/_version.py:__version__"]
changelog_file = false
branch = "main" 
commit_version_number = false  # disable auto commits
tag_commit = false            # disable auto tagging
prerelease = true
upload_to_pypi = false        # disable PyPI upload
upload_to_release = false     # disable GitHub release creation

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.ruff.lint]
select = ["D", "I001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"docs/source/examples/*" = ["D103"]

[tool.mypy]
disallow_any_explicit = false
disallow_any_generics = true
warn_unreachable = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [".venv/", "docs/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "polars"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "deprecated.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-v --mypy -p no:warnings --cov=pyprobe --cov-report=html --doctest-modules --ignore=docs/ --ignore=pyprobe/"

[tool.coverage.report]
exclude_also = [
    "@overload"
]
